--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,6 +3,15 @@
         <ion-title>
             Log in Conectio
         </ion-title>
+
+        <ion-item slot="end">
+            <ion-button color="primary" (click)="logout()">Register</ion-button>
+        </ion-item>
+
+        <!-- <ion-item slot="end">
+            <ion-button color="primary" (click)="register()">Register</ion-button>
+        </ion-item> -->
+
     </ion-toolbar>
 </ion-header>
 
