--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -34,7 +34,7 @@
             <ion-input label="Confirmar contraseña:" formControlName="password"></ion-input>
           </ion-item>
 
-          <ion-button expand="block" color="primary" class="button" >Registrarse</ion-button>
+          <ion-button expand="block" color="primary" class="button" (click)="registrar()">Registrarse</ion-button>
       </ion-list>
   </div>
 </ion-content>
